Прописал валидаторы на все маршруты, интерефейс админа задокументирован и протестирован
